syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

message Post{
    string customerid = 1;
    string customername = 2;
    string userid = 3;
    string channel =4;
    string description = 5;
    string product = 6;
    string phone = 7;
    string pic = 8;
    double price = 9;
    string notes = 10;
    string status = 11;
    string createdOn = 12;
    string updatedOn = 13;
    bool isDelete = 14;
    string productid = 15;
    string productname = 16;
}

message PostDetail{
    string api = 1;
    string postId = 2;
    string description = 3;
    string notes = 4;
    repeated Photo photo = 5;
    int32 status = 6;
    bool isDelete = 7;
    google.protobuf.Timestamp createdOn = 9;
    google.protobuf.Timestamp updatedOn = 10;
}

message Photo{
    int64 id = 1;
    string url = 2;
}
message CreatePostRequest{
    int64 id = 1;
    string customerid = 2;
    string customername = 3;
    string userid = 4;
    string channel =5;
    string description = 6;
    string product = 7;
    string phone = 8;
    string pic = 9;
    double price = 10;
    string notes = 11;
    string status = 13;
    string api = 14;
    string productid = 15;
}

message CreatePostResponse{
    string api = 1;
    string message = 2;
    bool error =3;
}

message UpdatePostRequest{
    int64 id = 1;
    string customerid = 2;
    string customername = 3;
    string userid = 4;
    string chanel =5;
    string description = 6;
    string product = 7;
    string phone = 8;
    string pic = 9;
    double price = 10;
    string notes = 11;
    string status = 12;
    string api = 13;
    string dbId = 14;
    string productid = 15;
}

message UpdatePostResponse{
    string api = 1;
    string message = 2;
    int64 id = 3;
    bool error =4;
}

message CreatePostDetailRequest{
    string postId = 1;
    string description = 2;
    string notes = 3;
    repeated Photo photo = 4;
    int32 status =5;
    string api = 6;
}

message CreatePostDetailResponse{
    string api = 1;
    string message = 2;
    bool error =3;
}

message UpdatePostDetailRequest{
    string postId = 1;
    string description = 2;
    string notes = 3;
    repeated Photo photo = 4;
    int32 status =5;
    string api = 6;
    string dbId =7;
    bool isDeleted = 8;
}

message UpdatePostDetailResponse{
    string api = 1;
    string message = 2;
    bool error =3;
}

message GetPostDataRequest{
    string id = 1;
    string api = 2;
}

message GetPostDataResponse{
    string api = 1;
    string message = 2;
    Post post =3;
    bool error = 4;
}

message GetPostDataDetailRequest{
    string id = 1;
    string api = 2;
}

message GetPostDataDetailResponse{
    string api = 1;
    string message = 2;
    PostDetail postDetail =3;
    bool error = 4;
}

message GetListPostDataRequest{
    string userId = 1;
    string api = 2;
}

message GetListPostDataResponse{
    string api = 1;
    string message = 2;
    repeated Post post =3;
    bool error = 4;
}

message GetListPostDataDetailRequest{
    string postId = 1;
    string api = 2;
}

message GetListPostDataDetailResponse{
    string api = 1;
    string message = 2;
    repeated PostDetail postDetail =3;
    bool error = 4;
}

message DeletePostRequest{
    string id = 1;
    string api = 2;
}

message DeletePostResponse{
    string api = 1;
    string message = 2;
    bool error = 3;
}

message DeletePostDetailRequest{
    string id = 1;
    string api = 2;
}

message DeletePostDetailResponse{
    string api = 1;
    string message = 2;
    bool error = 3;
}

service PostService{
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse){
        option (google.api.http) = {
            post: "/v1/post/create"
            body: "*"
        };
    }

    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse){
        option (google.api.http) = {
            post: "/v1/post/update"
            body: "*"
        };
    }

    rpc CreatePostDetail(CreatePostDetailRequest) returns (CreatePostDetailResponse){
        option (google.api.http) = {
            post: "/v1/post/create-post-detail"
            body: "*"
        };
    }

    rpc UpdatePostDetail(UpdatePostDetailRequest) returns (UpdatePostDetailResponse){
        option (google.api.http) = {
            post: "/v1/post/update-post-detail"
            body: "*"
        };
    }

    rpc GetPostData(GetPostDataRequest) returns (GetPostDataResponse){
        option (google.api.http) = {
            post: "/v1/post/data"
            body: "*"
        };
    }

    rpc GetPostDataDetail(GetPostDataDetailRequest) returns (GetPostDataDetailResponse){
        option (google.api.http) = {
            post: "/v1/post-detail/data"
            body: "*"
        };
    }

    rpc GetListPostData(GetListPostDataRequest) returns (GetListPostDataResponse){
        option (google.api.http) = {
            post: "/v1/post/data/list"
            body: "*"
        };
    }

    rpc GetListPostDataDetail(GetListPostDataDetailRequest) returns (GetListPostDataDetailResponse){
        option (google.api.http) = {
            post: "/v1/post/data-detail/list"
            body: "*"
        };
    }

    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse){
        option (google.api.http) = {
            post: "/v1/post/delete"
            body: "*"
        };
    }

    rpc DeletePostDetail(DeletePostDetailRequest) returns (DeletePostDetailResponse){
        option (google.api.http) = {
            post: "/v1/post-detail/delete"
            body: "*"
        };
    }
}